<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_attendence"
        android:icon="@drawable/outline_how_to_reg_white_24dp"
        android:title="@string/attendence" />
    <item
        android:id="@+id/action_assignm"
        android:icon="@drawable/outline_assignment_white_24dp"
        android:title="@string/assignments" />
    <item
        android:id="@+id/action_course"
        android:icon="@drawable/outline_library_books_white_24dp"
        android:title="@string/courses" />
    <item
        android:id="@+id/action_grades"
        android:icon="@drawable/outline_spellcheck_white_24dp"
        android:title="@string/grades" />
    <item
        android:id="@+id/action_schedule"
        android:icon="@drawable/outline_date_range_white_24dp"
        android:title="@string/schedule" />
    <item
        android:id="@+id/action_behavior"
        android:icon="@drawable/outline_perm_identity_white_24dp"
        android:title="@string/behavior" />
    <item
        android:id="@+id/action_events"
        android:icon="@drawable/outline_school_white_24dp"
        android:title="@string/events" />
    <item
        android:id="@+id/action_fees"
        android:icon="@drawable/outline_account_balance_wallet_white_24dp"
        android:title="@string/fees" />
</menu>